# DDA-PDES_Simulator_Framework

./: README.md
3D_torus_ROSS/: CMakeLists.txt  torus_3d_events.c  torus_3d_ross.h  torus_3d_ross_model.c  torus_3d_utils.c
PDDA_simulator_WSC25/: 3D_grid_network_default_dist_params_0_trial_0.txt  3D_torus_network_default_dist_params_0_trial_0.txt  Dist.cpp  Dist.h  FW_GPU.h  ITL_GPU.h  Makefile  PDDA_EventSet.cpp  PDDA_EventSet.h  PDDA_SV.cpp  PDDA_SV.h  PDDA_SV.tpp  PDDA_Sim.cpp  PDDA_SimExec.cpp  PDDA_SimExec.h  PDDA_SimModel.cpp  PDDA_SimModel.h  Vertex.cpp  Vertex.h  WSC_auto_testing_PDDA.py  infile_INoC.txt  infile_PHOLD.txt  infile_R1D.txt  infile_T3D.txt  infile_VN2D.txt  infile_VN3D.txt  network_topology_50.txt  network_topology_80.txt  network_topology_small_50.txt  network_topology_small_80.txt  node_status.csv  opt_FW_ITL_CPU.h  opt_FW_ITL_CPU_portable.h
PDDA_simulator_WSC25/Grid_VN2D/: Grid_VN2D.cpp  Grid_VN2D.h  Grid_VN2D_0.cpp  Grid_VN2D_0.h  Grid_VN2D_Arrive.cpp  Grid_VN2D_Arrive.h  Grid_VN2D_Depart.cpp  Grid_VN2D_Depart.h  Grid_VN2D_NeighborInfo.cpp  Grid_VN2D_NeighborInfo.h  Grid_VN2D_Packet.cpp  Grid_VN2D_Packet.h
PDDA_simulator_WSC25/Grid_VN3D/: Grid_VN3D.cpp  Grid_VN3D.h  Grid_VN3D_Arrive.cpp  Grid_VN3D_Arrive.h  Grid_VN3D_Depart.cpp  Grid_VN3D_Depart.h  Grid_VN3D_NeighborInfo.cpp  Grid_VN3D_NeighborInfo.h  Grid_VN3D_Packet.cpp  Grid_VN3D_Packet.h
PDDA_simulator_WSC25/Irregular_NoC/: Irregular_NoC.cpp  Irregular_NoC.h  Irregular_NoC_Arrive.cpp  Irregular_NoC_Arrive.h  Irregular_NoC_Common.h  Irregular_NoC_Depart.cpp  Irregular_NoC_Depart.h  Irregular_NoC_NeighborInfo.cpp  Irregular_NoC_NeighborInfo.h  Irregular_NoC_Packet.cpp  Irregular_NoC_Packet.h
PDDA_simulator_WSC25/PHOLD/: PHOLD_Arrive.cpp  PHOLD_Arrive.h  PHOLD_Model.cpp  PHOLD_Model.h
PDDA_simulator_WSC25/Ring_1D/: Ring_1D.cpp  Ring_1D.h  Ring_1D_Arrive.cpp  Ring_1D_Arrive.h  Ring_1D_Depart.cpp  Ring_1D_Depart.h  Ring_1D_Packet.cpp  Ring_1D_Packet.h
PDDA_simulator_WSC25/Torus_3D/: Torus_3D.cpp  Torus_3D.h  Torus_3D_Arrive.cpp  Torus_3D_Arrive.h  Torus_3D_Depart.cpp  Torus_3D_Depart.h  Torus_3D_NeighborInfo.cpp  Torus_3D_NeighborInfo.h  Torus_3D_Packet.cpp  Torus_3D_Packet.h
